# ED2-TP1

./: AcessoSequencialIndexado.cpp  AcessoSequencialIndexado.h  ArvoreB.cpp  ArvoreB.hpp  ArvoreB_estrela.cpp  ArvoreB_estrela.hpp  ArvoreBinaria.cpp  ArvoreBinaria.h  CMakeLists.txt  GeradorDeArquivo.cpp  GeradorDeArquivo.h  Main.cpp  ManipulacaoDeArquivos.cpp  ManipulacaoDeArquivos.h  README.md  exe
